--- a/charts/enterprise/traefik/values.yaml
+++ b/charts/enterprise/traefik/values.yaml
@@ -376,7 +376,7 @@ middlewares:
   addPrefix: []
   # - name: addPrefixName
   #   prefix: "/foo"
-  geoBlockVersion: v0.2.3
+  geoBlockVersion: v0.2.4
   geoBlock: []
   # -- https://github.com/PascalMinder/geoblock
   # - name: geoBlockName
@@ -390,6 +390,7 @@ middlewares:
   #   forceMonthlyUpdate: true
   #   allowUnknownCountries: false
   #   unknownCountryApiResponse: nil
+  #   blackListMode: false
   #   countries:
   #     - RU
 
