--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -16,11 +16,12 @@ jobs:
         helm-version:
           - v3.9.4
           - v3.10.3
+          - v3.11.0-rc.2
     steps:
       - name: Checkout
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
         with:
-          fetch-depth: 0
+          fetch-depth: 1
 
       - name: Install Helm
         uses: azure/setup-helm@5119fcb9089d432beecbf79bb2c7915207344b78 # tag=v3
@@ -47,17 +48,29 @@ jobs:
       - lint
     name: Unit Tests
     runs-on: ubuntu-22.04
+    env:
+      helmUnitVersion: 0.2.11
     strategy:
       fail-fast: false
       matrix:
         helm-version:
           - v3.9.4
           - v3.10.3
+          - v3.11.0-rc.2
     steps:
       - name: Checkout
         uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
         with:
-          fetch-depth: 0
+          fetch-depth: 1
+
+      - name: Cache helm plugins
+        uses: actions/cache@v3
+        with:
+          path: |
+            /home/runner/.local/share/helm/plugins/helm-unittest
+          key: helm-${{ matrix.helm-version }}-unittest-v${{ env.helmUnitVersion }}
+          restore-keys: |
+            helm-${{ matrix.helm-version }}-unittest-v${{ env.helmUnitVersion }}
 
       - name: Install Helm
         uses: azure/setup-helm@f382f75448129b3be48f8121b9857be18d815a82 # tag=v3
@@ -68,12 +81,21 @@ jobs:
         run: |
           retries=5
           x=$retries
+
+          # Check if helm unittest is installed
+          if helm unittest -h; then
+            x=1
+          fi
+
+          # If it's not installed, try to install it
           while [ $x -gt 0 ];
           do
             # If it succeeds set it to 1 and the next command will make it zero and exit the loop
-            helm plugin install https://github.com/quintush/helm-unittest --version v0.2.11 && x=1
+            helm plugin install https://github.com/quintush/helm-unittest --version v${helmUnitVersion} && x=1
             x=$(($x-1))
           done
+
+          # Run tests
           cd library/common-test/
           helm dependency update
           helm unittest --helm3 -f "tests/*/*.yaml" .
@@ -89,11 +111,12 @@ jobs:
         # We run tests on k3s version of latest SCALE release, SCALE nightly and manually defined "latest"
         k3s-version:
           - v1.25.3+k3s1
-          - v1.26.0+k3s1
+          - v1.26.0+k3s2
         # We run tests on Helm version of latest SCALE release, SCALE nightly and manually defined "latest"
         helm-version:
           - v3.9.4
           - v3.10.3
+          - v3.11.0-rc.2
 
     steps:
       - name: Checkout
@@ -113,7 +136,38 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@afea100a513515fbd68b0e72a7bb0ae34cb62aec # tag=v2.3.1
 
-      - name: Create k3d cluster
+      - name: Create k3d cluster - Attempt 1/3
+        continue-on-error: true
+        id: clusterc1
+        uses: nolar/setup-k3d-k3s@293b8e5822a20bc0d5bcdd4826f1a665e72aba96 # tag=v1.0.9
+        with:
+          version: ${{ matrix.k3s-version }}
+          # Flags found here https://github.com/k3d-io/k3d
+          k3d-args: --k3s-arg --disable=metrics-server@server:*
+
+      - name: Wait 10 second to retry
+        if: steps.clusterc1.outcome=='failure'
+        run: |
+          sleep 10
+
+      - name: Create k3d cluster - Attempt 2/3
+        continue-on-error: true
+        if: steps.clusterc1.outcome=='failure'
+        id: clusterc2
+        uses: nolar/setup-k3d-k3s@293b8e5822a20bc0d5bcdd4826f1a665e72aba96 # tag=v1.0.9
+        with:
+          version: ${{ matrix.k3s-version }}
+          # Flags found here https://github.com/k3d-io/k3d
+          k3d-args: --k3s-arg --disable=metrics-server@server:*
+
+      - name: Wait 10 second to retry
+        if: steps.clusterc2.outcome=='failure'
+        run: |
+          sleep 10
+
+      - name: Create k3d cluster - Attempt 2/3
+        if: steps.clusterc2.outcome=='failure'
+        id: clusterc3
         uses: nolar/setup-k3d-k3s@293b8e5822a20bc0d5bcdd4826f1a665e72aba96 # tag=v1.0.9
         with:
           version: ${{ matrix.k3s-version }}
