--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -120,6 +120,12 @@ jobs:
         values:
           - basic-values.yaml
           - configmap-values.yaml
+          - daemonset-values.yaml
+          - job-cron-values.yaml
+          - persistence-values.yaml
+          - rbac-values-values.yaml
+          - secrets-values.yaml
+          - statefulset-values.yaml
 
     steps:
       - name: Checkout
