--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -199,11 +199,11 @@ jobs:
 
       - name: Run chart-testing (install)
         run: |
-          mv -f library/common-test/runtests/${{ matrix.values }} library/common-test/values.yaml
+          mv -f library/common-test/runtests/${{ matrix.values }} library/common-test/ci/values.yaml
           ./kail --ignore-ns kube-system >> /tmp/output.log &
           ct install  --config .github/ct-install-config/ct-install.yaml \
                       --charts library/common-test \
-                      --debug || ((echo "" && echo "" && echo "--===PODLOGS===--" && echo "" && cat  /tmp/output.log && rm -f /tmp/output.log)) && exit 1
+                      --debug || (echo "" && echo "" && echo "--===PODLOGS===--" && echo "" && cat /tmp/output.log && rm -f /tmp/output.log) && exit 1
           kill $!
           echo ""
           echo ""
