--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -199,11 +199,10 @@ jobs:
           ./kail --ignore-ns kube-system >> /tmp/output.log &
           ct install  --config .github/ct-install-config/ct-install.yaml \
                       --charts library/common-test \
-                      --debug || \
-                        (echo -e "\n\n\n--===PODLOGS===--\n\n\n" && \
-                         cat /tmp/output.log && \
-                         rm -f /tmp/output.log) &&\
-                         exit 1
+                      --debug || (echo -e "\n\n\n--===PODLOGS===--\n\n\n" && \
+                                  cat /tmp/output.log && \
+                                  rm -f /tmp/output.log) && exit 1
+
           kill $!
           echo -e "\n\n\n--===PODLOGS===--\n\n\n"
           cat  /tmp/output.log
