--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -73,7 +73,7 @@ jobs:
           retries=5
           x=$retries
 
-          if helm unittest -h > /dev/null; then
+          if (helm unittest -h > /dev/null); then
             x=0
           fi
 
@@ -100,11 +100,9 @@ jobs:
         # We run tests on k3s version of latest SCALE release, SCALE nightly and manually defined "latest"
         k3s-version:
           - v1.25.3+k3s1
-          - v1.26.0+k3s2
         # We run tests on Helm version of latest SCALE release, SCALE nightly and manually defined "latest"
         helm-version:
           - v3.9.4
-          - v3.10.3
           - v3.11.0-rc.2
         values:
           - basic-values.yaml
