some test updates

--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -68,6 +68,15 @@ jobs:
         with:
           version: ${{ matrix.helm-version }}
 
+      - name: Cache helm plugins
+        uses: actions/cache@v3
+        with:
+          path: |
+            /home/runner/.local/share/helm/plugins/helm-unittest
+          key: helm-${{ matrix.helm-version }}-unittest-v${{ env.helmUnitVersion }}
+          restore-keys: |
+            helm-${{ matrix.helm-version }}-unittest-v${{ env.helmUnitVersion }}
+
       - name: Run tests
         run: |
           retries=5
@@ -97,13 +106,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # We run tests on k3s version of latest SCALE release, SCALE nightly and manually defined "latest"
+        # We run tests on k3s version of latest SCALE release and SCALE nightly
         k3s-version:
-          - v1.25.3+k3s1
-        # We run tests on Helm version of latest SCALE release, SCALE nightly and manually defined "latest"
+          - v1.25.3+k3s2
+        # We run tests on Helm version of latest SCALE release
         helm-version:
           - v3.9.4
-          - v3.11.0-rc.2
         values:
           - basic-values.yaml
           - configmap-values.yaml
