set shell to bash

--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -78,6 +78,7 @@ jobs:
             helm-${{ matrix.helm-version }}-unittest-v${{ env.helmUnitVersion }}
 
       - name: Run tests
+        shell: bash
         run: |
           retries=5
           x=$retries
