--- a/charts/enterprise/cert-manager/templates/common.yaml
+++ b/charts/enterprise/cert-manager/templates/common.yaml
@@ -4,4 +4,4 @@
 {{/* Render the templates */}}
 {{ include "tc.common.loader.apply" . }}
 
-{{- include "certmanager.clusterissuer" . }}
+{{- include "certmanager.clusterissuer.ACME.DNS01" . }}
