--- a/charts/enterprise/cert-manager/questions.yaml
+++ b/charts/enterprise/cert-manager/questions.yaml
@@ -66,6 +66,10 @@ questions:
                         enum:
                           - value: cloudflare
                             description: Cloudflare
+                          - value: route53
+                            description: route53
+                          - value: HTTP01
+                            description: HTTP01
                     - variable: cfapikey
                       label: CloudFlare API key
                       description: "CloudFlare API Key"
@@ -78,5 +82,36 @@ questions:
                       description: "CloudFlare API Token"
                       schema:
                         show_if: [["type", "=", "cloudflare"]]
+                        type: string
+                        default: ""
+                    - variable: region
+                      label: Route53 Region
+                      description: "Route 53 Region"
+                      schema:
+                        show_if: [["type", "=", "route53"]]
+                        type: string
+                        required: true
+                        default: "us-west-1"
+                    - variable: accessKeyID
+                      label: Route53 accessKeyID
+                      description: "Route53 accessKeyID"
+                      schema:
+                        show_if: [["type", "=", "route53"]]
+                        type: string
+                        required: true
+                        default: ""
+                    - variable: route53SecretAccessKey
+                      label: Route53 Secret Access Key
+                      description: "Route53 Secret Access Key"
+                      schema:
+                        show_if: [["type", "=", "route53"]]
+                        type: string
+                        required: true
+                        default: ""
+                    - variable: role
+                      label: Route53 Role (optional)
+                      description: "Route53 Role"
+                      schema:
+                        show_if: [["type", "=", "route53"]]
                         type: string
                         default: ""
