add experimental HTTP01 support

--- a/charts/enterprise/cert-manager/questions.yaml
+++ b/charts/enterprise/cert-manager/questions.yaml
@@ -69,7 +69,7 @@ questions:
                           - value: route53
                             description: route53
                           - value: HTTP01
-                            description: HTTP01
+                            description: HTTP01 (experimental)
                     - variable: cfapikey
                       label: CloudFlare API key
                       description: "CloudFlare API Key"
