--- a/charts/enterprise/cert-manager/values.yaml
+++ b/charts/enterprise/cert-manager/values.yaml
@@ -45,3 +45,8 @@ clusterIssuer:
 #     route53SecretAccessKey: ""
 #     # optional for route53
 #     role: ""
+#     # for akamai
+#     serviceConsumerDomain: ""
+#     akclientToken: ""
+#     akclientSecret: ""
+#     akaccessToken: ""
