--- a/charts/enterprise/cert-manager/values.yaml
+++ b/charts/enterprise/cert-manager/values.yaml
@@ -50,3 +50,5 @@ clusterIssuer:
 #     akclientToken: ""
 #     akclientSecret: ""
 #     akaccessToken: ""
+#     # for digitalocean
+#     doaccessToken: ""
