--- a/.github/workflows/common_library_tests.yaml
+++ b/.github/workflows/common_library_tests.yaml
@@ -77,7 +77,7 @@ jobs:
 
           while [ $x -gt 0 ];
           do
-            if (elm plugin list | grep unittest); then
+            if (helm plugin list | grep unittest); then
               # If it succeeds set it to 1 and the next command will make it zero and exit the loop
               x=1
             fi
