--- a/charts/enterprise/cert-manager/values.yaml
+++ b/charts/enterprise/cert-manager/values.yaml
@@ -52,3 +52,8 @@ clusterIssuer:
 #     akaccessToken: ""
 #     # for digitalocean
 #     doaccessToken: ""
+#     # for rfc2136
+#     nameserver: ""
+#     tsigKeyName: ""
+#     tsigAlgorithm: ""
+#     rfctsigSecret: ""
