--- a/charts/enterprise/cert-manager/questions.yaml
+++ b/charts/enterprise/cert-manager/questions.yaml
@@ -8,6 +8,25 @@ questions:
       additional_attrs: true
       type: dict
       attrs:
+        - variable: selfSigned
+          label: 'SelfSigned Issuer'
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: enabled
+                label: enabled
+                description: "Enable self-signed issuer"
+                schema:
+                  type: bool
+                  default: true
+              - variable: name
+                label: Name
+                description: "Name to give the issuer"
+                schema:
+                  type: string
+                  required: true
+                  default: "selfSigned"
         - variable: ACME
           label: ACME Issuer
           schema:
