add metrics and fix selfsigned

--- a/charts/enterprise/cert-manager/questions.yaml
+++ b/charts/enterprise/cert-manager/questions.yaml
@@ -216,3 +216,6 @@ questions:
                         type: string
                         required: true
                         default: ""
+
+# Include{metrics}
+# Include{documentation}
