--- a/charts/enterprise/cert-manager/templates/common.yaml
+++ b/charts/enterprise/cert-manager/templates/common.yaml
@@ -5,3 +5,5 @@
 {{ include "tc.common.loader.apply" . }}
 
 {{- include "certmanager.clusterissuer.acme" . }}
+{{- include "certmanager.clusterissuer.selfsigned" . }}
+{{- define "certmanager.metrics" -}}
