actually load CA

--- a/charts/enterprise/cert-manager/templates/common.yaml
+++ b/charts/enterprise/cert-manager/templates/common.yaml
@@ -6,4 +6,5 @@
 
 {{- include "certmanager.clusterissuer.acme" . }}
 {{- include "certmanager.clusterissuer.selfsigned" . }}
+{{- include "certmanager.clusterissuer.CA" . }}
 {{- include "certmanager.metrics" . }}
