--- a/charts/stable/valheim/questions.yaml
+++ b/charts/stable/valheim/questions.yaml
@@ -21,25 +21,26 @@ questions:
       type: dict
       attrs:
         - variable: SUPERVISOR_HTTP_USER
-          label: SUPERVISOR_HTTP_USER
+          label: Supervisor HTTP User
           schema:
             type: string
             default: admin
             required: true
         - variable: SUPERVISOR_HTTP_PASS
-          label: SUPERVISOR_HTTP_PASS
+          label: Supervisor HTTP Pass
           schema:
             type: string
             required: true
             private: true
-            default: REPLACETHIS
+            default: ""
         - variable: SERVER_PASS
-          label: SERVER_PASS
+          label: Server Pass
           schema:
             type: string
             required: true
             private: true
-            default: REPLACETHIS
+            default: ""
+            min_length: 5
   - variable: env
     group: App Configuration
     label: Image Environment
@@ -48,57 +49,57 @@ questions:
       type: dict
       attrs:
         - variable: STATUS_HTTP
-          label: STATUS_HTTP
+          label: Status HTTP
           schema:
             type: boolean
             default: true
         - variable: SUPERVISOR_HTTP
-          label: SUPERVISOR_HTTP
+          label: Supervisor HTTP
           schema:
             type: boolean
             default: true
         - variable: SERVER_NAME
-          label: SERVER_NAME
+          label: Server Name
           schema:
             type: string
             default: My Server
             required: true
         - variable: WORLD_NAME
-          label: WORLD_NAME
+          label: World Name
           schema:
             type: string
             default: Dedicated
             required: true
         - variable: SERVER_PUBLIC
-          label: SERVER_PUBLIC
+          label: Server Public
           schema:
             type: boolean
             default: true
         - variable: UPDATE_INTERVAL
-          label: UPDATE_INTERVAL
+          label: Update Interval
           schema:
             type: int
             default: 10800
             required: true
         - variable: BACKUPS
-          label: BACKUPS
+          label: Backups
           schema:
             type: boolean
             default: true
         - variable: BACKUPS_INTERVAL
-          label: BACKUPS_INTERVAL
+          label: Backups Interval
           schema:
             type: int
             default: 43200
             required: true
         - variable: BACKUPS_DIRECTORY
-          label: BACKUPS_DIRECTORY
+          label: Backups Directory
           schema:
             type: string
             default: /backups
             required: true
         - variable: BACKUPS_MAX_AGE
-          label: BACKUPS_MAX_AGE
+          label: Backups Max Age
           schema:
             type: int
             default: 3
