wait for pod to be ready

--- a/charts/enterprise/cert-manager/templates/common.yaml
+++ b/charts/enterprise/cert-manager/templates/common.yaml
@@ -8,3 +8,4 @@
 {{- include "certmanager.clusterissuer.selfsigned" . }}
 {{- include "certmanager.clusterissuer.ca" . }}
 {{- include "certmanager.metrics" . }}
+{{- include "certmanager.wait" . }}
