some more fixes

--- a/charts/enterprise/cert-manager/ci/CA-values.yaml
+++ b/charts/enterprise/cert-manager/ci/CA-values.yaml
@@ -1,8 +1,8 @@
 clusterIssuer:
   selfSigned:
     enabled: true
-    name: "selfSigned"
+    name: "selfsigned"
   CA:
-    - name: myCA
+    - name: myca
       selfSigned: true
       selfSignedCommonName: "my-selfsigned-ca"
